pkg/lang/syntax/testdata/ub/validate/invalid/factory/configurations-meta-field.ub
factory: {
  configurations: {
    formal: greet {}
  }

  actions: {
    say: greeter.say {
      @configurations: { greet: configuration.formal.prefix }
    }
  }
}
